--- a/webapp/test/testsuite.qunit.html
+++ b/webapp/test/testsuite.qunit.html
@@ -5,7 +5,7 @@
             QUnit test suite for
             ecastella.karmaqunit
         </title>
-        <script src="../resources/sap/ui/qunit/qunit-redirect.js"></script>
+        <script src="../../../../resources/sap/ui/qunit/qunit-redirect.js"></script>
         <script src="testsuite.qunit.js" data-sap-ui-testsuite></script>
     </head>
     <body></body>
